src/test/ui/issues/issue-57843.nll.stderr
error: higher-ranked subtype error
  --> $DIR/issue-57843.rs:23:9
   |
LL |     Foo(Box::new(|_| ()));
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

